--- a/tun2socks-core/tun2socks-core.vcxproj
+++ b/tun2socks-core/tun2socks-core.vcxproj
@@ -126,11 +126,11 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;__WIN32__;_DEBUG;TUN2SOCKSCORE_EXPORTS;_WINDOWS;_WINSOCK_DEPRECATED_NO_WARNINGS;_WIN32_WINNT=0x0A00;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;__WIN32__;_DEBUG;TUN2SOCKSCORE_EXPORTS;_WINDOWS;_WINSOCK_DEPRECATED_NO_WARNINGS;_WIN32_WINNT=0x0A00;BOOST_COROUTINES_NO_DEPRECATION_WARNING;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalOptions>/IGNORE:4103 /await %(AdditionalOptions)</AdditionalOptions>
       <DisableSpecificWarnings>4103</DisableSpecificWarnings>
-      <LanguageStandard>stdcpp17</LanguageStandard>
+      <LanguageStandard>stdcpp14</LanguageStandard>
       <CompileAs>Default</CompileAs>
     </ClCompile>
     <Link>
@@ -230,15 +230,33 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
-    <ClCompile Include="lwip\src\api\api_lib.c" />
-    <ClCompile Include="lwip\src\api\api_msg.c" />
-    <ClCompile Include="lwip\src\api\err.c" />
-    <ClCompile Include="lwip\src\api\if_api.c" />
-    <ClCompile Include="lwip\src\api\netbuf.c" />
-    <ClCompile Include="lwip\src\api\netdb.c" />
-    <ClCompile Include="lwip\src\api\netifapi.c" />
-    <ClCompile Include="lwip\src\api\sockets.c" />
-    <ClCompile Include="lwip\src\api\tcpip.c" />
+    <ClCompile Include="lwip\src\api\api_lib.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\api\api_msg.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\api\err.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\api\if_api.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\api\netbuf.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\api\netdb.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\api\netifapi.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\api\sockets.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\api\tcpip.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
     <ClCompile Include="lwip\src\core\altcp.c">
       <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
     </ClCompile>
@@ -350,52 +368,137 @@
     <ClCompile Include="lwip\src\core\udp.c">
       <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
     </ClCompile>
-    <ClCompile Include="lwip\src\netif\bridgeif.c" />
-    <ClCompile Include="lwip\src\netif\bridgeif_fdb.c" />
-    <ClCompile Include="lwip\src\netif\ethernet.c" />
-    <ClCompile Include="lwip\src\netif\lowpan6.c" />
-    <ClCompile Include="lwip\src\netif\lowpan6_ble.c" />
-    <ClCompile Include="lwip\src\netif\lowpan6_common.c" />
-    <ClCompile Include="lwip\src\netif\ppp\auth.c" />
-    <ClCompile Include="lwip\src\netif\ppp\ccp.c" />
-    <ClCompile Include="lwip\src\netif\ppp\chap-md5.c" />
-    <ClCompile Include="lwip\src\netif\ppp\chap-new.c" />
-    <ClCompile Include="lwip\src\netif\ppp\chap_ms.c" />
-    <ClCompile Include="lwip\src\netif\ppp\demand.c" />
-    <ClCompile Include="lwip\src\netif\ppp\eap.c" />
-    <ClCompile Include="lwip\src\netif\ppp\ecp.c" />
-    <ClCompile Include="lwip\src\netif\ppp\eui64.c" />
-    <ClCompile Include="lwip\src\netif\ppp\fsm.c" />
-    <ClCompile Include="lwip\src\netif\ppp\ipcp.c" />
-    <ClCompile Include="lwip\src\netif\ppp\ipv6cp.c" />
-    <ClCompile Include="lwip\src\netif\ppp\lcp.c" />
-    <ClCompile Include="lwip\src\netif\ppp\magic.c" />
-    <ClCompile Include="lwip\src\netif\ppp\mppe.c" />
-    <ClCompile Include="lwip\src\netif\ppp\multilink.c" />
-    <ClCompile Include="lwip\src\netif\ppp\polarssl\arc4.c" />
-    <ClCompile Include="lwip\src\netif\ppp\polarssl\des.c" />
-    <ClCompile Include="lwip\src\netif\ppp\polarssl\md4.c" />
-    <ClCompile Include="lwip\src\netif\ppp\polarssl\md5.c" />
-    <ClCompile Include="lwip\src\netif\ppp\polarssl\sha1.c" />
-    <ClCompile Include="lwip\src\netif\ppp\ppp.c" />
-    <ClCompile Include="lwip\src\netif\ppp\pppapi.c" />
-    <ClCompile Include="lwip\src\netif\ppp\pppcrypt.c" />
-    <ClCompile Include="lwip\src\netif\ppp\pppoe.c" />
-    <ClCompile Include="lwip\src\netif\ppp\pppol2tp.c" />
-    <ClCompile Include="lwip\src\netif\ppp\pppos.c" />
-    <ClCompile Include="lwip\src\netif\ppp\upap.c" />
-    <ClCompile Include="lwip\src\netif\ppp\utils.c" />
-    <ClCompile Include="lwip\src\netif\ppp\vj.c" />
-    <ClCompile Include="lwip\src\netif\slipif.c" />
-    <ClCompile Include="lwip\src\netif\zepif.c" />
-    <ClCompile Include="lwip\src\sys_arch.c" />
-    <ClCompile Include="socks5.cpp" />
+    <ClCompile Include="lwip\src\netif\bridgeif.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\bridgeif_fdb.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\ethernet.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\lowpan6.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\lowpan6_ble.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\lowpan6_common.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\ppp\auth.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\ppp\ccp.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\ppp\chap-md5.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\ppp\chap-new.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\ppp\chap_ms.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\ppp\demand.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\ppp\eap.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\ppp\ecp.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\ppp\eui64.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\ppp\fsm.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\ppp\ipcp.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\ppp\ipv6cp.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\ppp\lcp.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\ppp\magic.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\ppp\mppe.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\ppp\multilink.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\ppp\polarssl\arc4.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\ppp\polarssl\des.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\ppp\polarssl\md4.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\ppp\polarssl\md5.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\ppp\polarssl\sha1.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\ppp\ppp.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\ppp\pppapi.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\ppp\pppcrypt.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\ppp\pppoe.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\ppp\pppol2tp.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\ppp\pppos.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\ppp\upap.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\ppp\utils.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\ppp\vj.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\slipif.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\netif\zepif.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="lwip\src\sys_arch.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="socks5.cpp">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
     <ClCompile Include="tun2socks-core.cpp" />
+    <ClCompile Include="tuntap-windows.cpp">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\lwipstack.h" />
     <ClInclude Include="include\socks5.h" />
     <ClInclude Include="include\tap-windows.h" />
     <ClInclude Include="include\tun2socks.h" />
+    <ClInclude Include="include\tuntap.h" />
     <ClInclude Include="libuv\include\android-ifaddrs.h" />
     <ClInclude Include="libuv\include\pthread-barrier.h" />
     <ClInclude Include="libuv\include\stdint-msvc2008.h" />
