--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
 * text=auto
+tun2socks-core/lwip/* linguist-vendored
 
 ###############################################################################
 # Set default behavior for command prompt diff.
